# binance-quotation

./: README.md  main.py  pre-push.sh  pyproject.toml  requirements.txt
core/: bot.py  config.py  stream.py  ws.py
tests/: conftest.py  tests.py
