[tool.poetry]
name = "binance-quotation"
version = "0.1.0"
description = ""
authors = ["whatislove118 <pochikalin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"
certifi = "^2021.10.8"
aiogram = "^2.20"
python-dotenv = "^0.20.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
mock = "^4.0.3"

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
python_files = "tests.py test_*.py *_tests.py tests/test_*.py"

[tool.black]
exclude = '''
/(
    .git
  | .mypy_cache
  | .tox
  | venv
  | .venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
